# StayAhead

./: .env  .gitignore  .release_android_key.jks  404.html  CHANGELOG.md  Cargo.toml  Dioxus.ghpages.toml  Dioxus.toml  LICENSE  README.md  build_all.sh  build_android.sh  build_gh_pages.sh  build_macos.sh  index.html  package-lock.json  package.json  start_tailwind_watch.sh  tailwind.config.js  update_gh_pages.sh
assets/: about-aa00fae34adb6a83.png.br  all_tasks-bd8dbf92806aca8d.png.br  collapse_to_done-3a7b1bd4d5a6768c.png.br  collapse_to_today-f523cf346ba1af2c.png.br  favicon-0bb804262a31c631.ico.br  favicon-22752123b36cf2e0.ico.br  log_action-cccd4895e76cad14.png.br  new_task-3adf0d1ecc787620.png.br  stay-ahead-025839a0e5dd7511.js  stay-ahead-025839a0e5dd7511.js.br  stay-ahead-1249bdd04e009527.js  stay-ahead-1249bdd04e009527.js.br  stay-ahead-1422d4dece863465.js  stay-ahead-1422d4dece863465.js.br  stay-ahead-252517a6f6e19bc9.js  stay-ahead-252517a6f6e19bc9.js.br  stay-ahead-4169827a2cd776d3.js  stay-ahead-4169827a2cd776d3.js.br  stay-ahead-50dc00c22647eac9.js  stay-ahead-50dc00c22647eac9.js.br  stay-ahead-5e5c8a0cea1dc529.js  stay-ahead-5e5c8a0cea1dc529.js.br  stay-ahead-9b5a4923d75cf3cf.js  stay-ahead-9b5a4923d75cf3cf.js.br  stay-ahead-d7edf5959f6c2b1d.js  stay-ahead-d7edf5959f6c2b1d.js.br  stay-ahead-e9e0d7a59af81b80.js  stay-ahead-e9e0d7a59af81b80.js.br  stay-ahead-f07e6b4957033ee8.js  stay-ahead-f07e6b4957033ee8.js.br  stay-ahead_bg-0d3f3107057f90d3.wasm  stay-ahead_bg-0d3f3107057f90d3.wasm.br  stay-ahead_bg-1c0a3bda1eed509b.wasm  stay-ahead_bg-1c0a3bda1eed509b.wasm.br  stay-ahead_bg-24009bd22335e543.wasm  stay-ahead_bg-24009bd22335e543.wasm.br  stay-ahead_bg-2462df937eb741d8.wasm  stay-ahead_bg-2462df937eb741d8.wasm.br  stay-ahead_bg-254e4bd0aa84df9d.wasm  stay-ahead_bg-254e4bd0aa84df9d.wasm.br  (+56 more)
assets/css/: tailwind_input.css  tailwind_output.css
src/: main.rs
src/components/: css_preset.rs  header_navbar.rs  mod.rs  page_about.rs  page_action_log.rs  page_setting.rs  page_task_create.rs  page_task_list.rs  page_task_visual.rs  routes.rs
src/states/: encoding.rs  mod.rs  motivation.rs  qr.rs  serializable_state.rs  serializable_task.rs  state.rs  sync_mode.rs  task.rs
src/states/platform/: android.rs  config.rs  desktop.rs  ios.rs  mod.rs  persistence.rs  web.rs
